--- a/views/home.ejs
+++ b/views/home.ejs
@@ -7,6 +7,14 @@
 
 
       <body>
+       
+      <%- include('_header'); %>
+      
         <h1>Codeal / <%= title %></h1>
+      
+        <%- include('_footer'); %>   
+        
+    
       </body>
+
 </html>
