--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -1,13 +1,5 @@
-<html>
-  <head>
-    <title><%= title %></title>
-  </head>
-
-  <body>
-    <%- include('_header'); %>
+<link rel="stylesheet" href="/css/user_profile.css">
 
     <h1>Codeal/ Profile page</h1>
 
-    <%- include('_footer'); %>
-  </body>
-</html>
+
