--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,5 +1,8 @@
-
-      
-        <h1>Codeal / <%= title %></h1>
+ <h1>Codeal / <%= title %></h1>
       
  
+ <section id ="feedpost">
+        <h4>Posts</h4>
+        <form action="" id = "new-post-form" method="POST"></form>
+
+ </section>
