--- a/views/layout.ejs
+++ b/views/layout.ejs
@@ -4,6 +4,8 @@
             <%= title %>
          </title>
          <link rel="stylesheet" href="/css/layout.css" type="text/css">
+         <link rel="stylesheet" href="/css/header.css" type="text/css">
+         <link rel="stylesheet" href="/css/footer.css" type="text/css">
          <%- style %>
      </head>
 
