making a post create system with database

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -1,8 +1,13 @@
  <h1>Codeal / <%= title %></h1>
       
  
- <section id ="feedpost">
+ <section id ="feed-post">
         <h4>Posts</h4>
-        <form action="" id = "new-post-form" method="POST"></form>
+        <form action="posts/create" id = "new-post-form" method="POST">
+                <textarea name="content"  cols="30" rows="3"></textarea>
+                <input type="submit" value="Post">
+        </form>
+        
+
 
  </section>
