--- a/views/home.ejs
+++ b/views/home.ejs
@@ -3,11 +3,32 @@
  
  <section id ="feed-post">
         <h4>Posts</h4>
+        <% if (locals.user) %>
         <form action="posts/create" id = "new-post-form" method="POST">
                 <textarea name="content"  cols="30" rows="3"></textarea>
                 <input type="submit" value="Post">
         </form>
-        
+        <div id="posts-list-container">
+
+                <ul>
+                        <% for(post of posts){ %>
+                                
+                            <p>
+                                <li>
+                                        <%= post.content %>
+                                        <br>
+                                        <small>
+                                                <%= user.name %>
+                                        </small>
+                                </li>
+                            </p>
+                                
+                                
+                                <% } %>
+                </ul>
+
+
+        </div>
 
 
  </section>
