adding ajax and jquiery foer smoother expiernce

--- a/views/_post.ejs
+++ b/views/_post.ejs
@@ -1,14 +1,14 @@
-<li>
+<li id="Post-<%= post._id %>">
     <p>
-        <% if (locals.user  &&  locals.user.id == post.user.id ){%>
+        <% if (locals.user && locals.user.id == post.user.id){ %>
         <small>
-            <a href="posts/destroy/<%= post.id %>">X</a>
+            <a  class="post-delete-button" href="/posts/destroy/<%= post.id %>" >X</a>
         </small>
         <% } %>
         <%= post.content %>
         <br>
         <small>
-            <%= user.name %>
+            <%= post.user.name %>
         </small>
     </p>
     <div class="post-comments">
@@ -24,11 +24,13 @@
         <div class="post-comments-list">
             <ul id="post-comments-<%= post._id %>">
                 <% for (comment of post.comments){%>
-                <%- include('_comment') -%>
+
+                 <%- include('_comment') -%>
+                    
                 
                 <%} %>
             </ul>
-        </div> 
+        </div>
     </div>
     
 </li>
