--- a/views/user_profile.ejs
+++ b/views/user_profile.ejs
@@ -8,10 +8,13 @@
 
 <% if(user.id == profile_user.id){%>
     <!-- if user matches then show the form -->
-        <form action="/users/update/<%= profile_user.id %>" method ="post">
+
+        <form action="/users/update/<%= profile_user.id %>" enctype="multipart/form-data" ="post">
            <input type="text" name = "name" placeholder="Your Name" value="<% profile_user.name %>" required>
            <input type="text" name = "email" placeholder="Your Email" value="<% profile_user.email %>" required>
-            <input type="submit" value="update">
+           
+           <input type="file" name="avatar" placeholder="Profile Picture">
+           <input type="submit" value="update">
         </form>
     <%} else {%>
 <!-- eslse show only the profile info -->
