--- a/assets/css/footer.css
+++ b/assets/css/footer.css
@@ -1,13 +1,11 @@
-.footer {
-    display: flex;
-    justify-content: left;
-    padding: 15px 1%;
-    border-top: 2px solid #535660;
-    background-color: rgb(255, 255, 255);
-    margin: 0px;
-    
-    overflow: hidden;
-    position: fixed;
-    bottom: 0;
-    width: 100%;
-}
+#layout-footer {
+  color: white;
+  background: grey;
+  padding: 5px 10px;
+  display: flex;
+  justify-content: flex-start; }
+  #layout-footer a {
+    color: white;
+    text-decoration: none; }
+  #layout-footer .footer-nav ul {
+    list-style: none; }
