--- a/assets/css/header.css
+++ b/assets/css/header.css
@@ -1,40 +1,20 @@
-@import url('https://fonts.googleapis.com/css2?family=Bruno+Ace+SC&family=Rajdhani:wght@500&family=Roboto+Mono:wght@300&display=swap');
-
-body{
-    margin:0%;
-    font-family: 'Bruno Ace SC', cursive;
-
-}
-
-.header{
+#layout-header nav {
+  display: flex;
+  justify-content: space-between;
+  padding: 0 10px;
+  background: #2196f3;
+  color: white;
+  box-shadow: 1px 1px 1px 1px lightgrey; }
+  #layout-header nav .mini-logo p {
+    margin: 5px;
+    font-size: 1.4rem;
+    font-weight: bold; }
+  #layout-header nav .auth-links ul {
+    margin: 5% 5px;
     display: flex;
-    justify-content: space-between ;
-    align-items: center;
-    padding:2px 1% ;
-    border-bottom: 1px solid #535660;
-    background-color:rgb(255, 255, 255);
-    height: 9%;
-    
-}
-
-.nav-head {
-   
-list-style: none;
-
-
-    
-}
-
-.nav-head li{
-    display: inline-block;
-    padding: 0px 20px;
-}
-
-.nav-head li a{
- transition: all 0.3s ease 0s;   
-}
-
-.nav-head li a:hover{
-    color: grey;
-}
-
+    list-style: none; }
+    #layout-header nav .auth-links ul li {
+      margin-right: 10px; }
+  #layout-header nav a {
+    color: white;
+    text-decoration: none; }
