--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,6 +1,5 @@
-body{
-    margin: 0;
-    
-    background-color:rgb(242, 243, 238);
-}
-
+body {
+  margin: 0;
+  /* text-align: center; */ }
+  body #layout-main {
+    height: 100%; }
