--- a/views/_header.ejs
+++ b/views/_header.ejs
@@ -1,27 +1,35 @@
-
-<header class="header">
+<header id="layout-header">
+    <nav>
+        <div class="mini-logo">
+            <p>
+                <a href='/'>
+                    codeial
+                </a>
+            </p>
+        </div>
     
-    CODEIEL
-<ul class = "nav-head">
-    <% if (locals.user){ %>
-
-       <li><%= user.name %></li>
-       <li>
-        <a href="/users/sign-out" class="sign" >Sign Out</a>
-       </li>
-
-    <% }else{ %>
-        <li>
-            <a href="/users/sign-in" class="sign">Sign In</a>
-           </li>
-           <li>
-            <a href="/users/sign-up"class="sign">Sign Up</a>
-           </li>
+        <div class="auth-links">
+            <ul>
+                <% if (locals.user){ %>
+                <li>
+                    <a href="/users/profile"><%= user.name %></a>
+                </li>
+                <li>
+                    <a href="/users/sign-out">Sign Out</a>
+                </li>
+                <% }else{ %>
+                <li>
+                    <a href="/users/sign-in">Sign In</a>
+                </li>
+                <li>
+                    <a href="/users/sign-up">Sign Up</a>
+                </li>
         
-
-
-    <% } %>
-</ul>
+                <% } %>
+            </ul>
+        </div>
+    </nav>
+ 
 
 
 </header>
