--- a/views/mailers/comments/new_comment.ejs
+++ b/views/mailers/comments/new_comment.ejs
@@ -1,8 +1,9 @@
 <div>
-    <p>Hey <%= comment.user.name %>!</p>
-    <hr>
+
+    <p>Hi <%= comment.user.name%>!</p>
     <br>
-    <p>Your Comment <strong><%= comment.content %></strong> just got published on Codeial.</p>
+    <br>
+    <p>Your comment <strong><%= comment.content %></strong> just got pubished on codeial.</p>
     <br>
     <br>
     <p>Thanks!</p>
